fixed contentId and always creating new rooms. Also fixed styling for scrollbar on chat window

--- a/chat/public/main.css
+++ b/chat/public/main.css
@@ -56,6 +56,9 @@ body {
     overflow: auto;
     padding: 3px; 
     word-wrap: break-word;
+    top: 35px;
+    bottom: 31px;
+    position: absolute;
 }
 
 #bottomBox {
